# claude-brain

./: .gitignore  LICENSE  PUBLIC_REPO_NOTICE.md  README.md  analytics-dashboard.html  knowledge-graph.html  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  hook-counter.json  init-report.txt  settings.json
.claude/agents/: INDEX.md  README.md  analyst.md  book-tutor.md  classification-expert.md  finance-tutor.md  journalist.md  knowledge-indexer.md  language-tutor.md  law-tutor.md  medicine-tutor.md  programming-tutor.md  review-master.md  science-tutor.md
.claude/commands/: INDEX.md  README.md  ask.md  diagnose-memory.md  discover-relations.md  fact-check.md  graph.md  kb-init.md  learn.md  maintain.md  memory-clear.md  memory-export.md  memory-forget.md  memory-show.md  memory-status.md  progress.md  review.md  save.md  stats.md  sync-rems.md  test.md  visualize.md
.claude/hooks/: pretool-workflow-gate.py  prompt-workflow.py  session-info.sh
.review/: analytics-isced.json  schedule.json
.review/backups/: schedule-20260305-005204.json  schedule-20260305-005735.json  schedule-20260305-010317.json
chats/: index.json
chats/2026-03/: cartier-china-branding-2026-03-05.md
docs/dev/: context-20260304-000000.json  dev-report-20260304-000000.json  qa-report-20260304-000000.json
knowledge-base/_index/: backlinks.backup.json  backlinks.json  graph-data.json
knowledge-base/_taxonomy/: INDEX.md  README.md  index.md  isced-index.md
scripts/: INDEX.md  README.md  add-missing-rem-ids.py  add-missing-sections.py  add-session-types.py  agent_memory_utils.py  analyze-resolutions.py  batch-reextract-all.sh  batch_reextract_all.sh  check_chunks_bidirectional.py  check_typed_bidirectional.py  deploy-to-cloudflare-kv.sh  deploy-to-cloudflare-private.sh  deploy-to-cloudflare-r2.sh  deploy-to-cloudflare.sh  deploy-to-github.sh  deploy-to-netlify.sh  fix-archive-issues.py  fix-bidirectional-contradictions.py  fix-bidirectional-links.py  fix-duplicate-paired-relations.py  fix-graph-tags.py  fix-hierarchical-contradictions-v2.py  fix-hierarchical-contradictions.py  fix-nonstandard-relation-types.py  fix-numbering.sh  fix-report.md  fix-source-fields.py  fix-subagent-headers.py  playwright-stealth-wrapper.sh  reextract-one-conversation.sh  reextract_one_conversation.sh  repair-conversation-links.py  repair_fsrs_schedule.py  serve-analytics.sh  setup-nginx-hosting.sh  test-playwright-ice.sh  test_deployed_graph.py  test_deployed_static.py  test_local_html.py  (+2 more)
(+334 files in other folders)
