[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-system"
version = "1.0.0"
description = "A personal knowledge management and spaced repetition learning system built on Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yugoge"}
]
keywords = [
    "knowledge-management",
    "spaced-repetition",
    "learning",
    "fsrs",
    "claude-code",
    "ai-powered"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.8.2",
    "networkx>=3.5",
    "numpy>=1.26.4",
    "pillow>=12.0.0",
    "pytest>=8.3.4",
    "python-pptx>=1.0.2",
    "scipy>=1.11.4",
    "typing_extensions>=4.15.0",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Yugoge/claude-brain"
Repository = "https://github.com/Yugoge/claude-brain"
Issues = "https://github.com/Yugoge/claude-brain/issues"

[tool.setuptools]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]
